# axum-wasi

./: Cargo.toml  a.wasm
src/: lib.rs
wit/: world.wit
